--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,6 @@
-@import './base.css';
+/* @import './base.css'; */
 
-#app {
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -32,4 +32,9 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+} */
+#app .el-button--primary {
+  background-color: #e99d42;
+  color: #fff;
+  border: none;
 }
